--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,26 +1,27 @@
 {
-    "editor.fontSize": 16,
-    "terminal.integrated.fontSize": 16,
-    "files.trimTrailingWhitespace": true,
-    "editor.tabSize": 4,
-    "editor.detectIndentation": false,
-    "editor.formatOnSave": false,
-    "[makefile]": {
-        "editor.insertSpaces": false,
-        "editor.detectIndentation": false,
-    },
     "[c]": {
         "editor.formatOnSave": true,
-        "editor.semanticHighlighting.enabled": true,
+        "editor.semanticHighlighting.enabled": true
+    },
+    "[makefile]": {
+        "editor.detectIndentation": false,
+        "editor.insertSpaces": false
     },
     "C_Cpp.dimInactiveRegions": true,
-    "C_Cpp.vcFormat.indent.caseContents": false,
     "C_Cpp.vcFormat.indent.preserveWithinParentheses": false,
     "C_Cpp.vcFormat.newLine.closeBraceSameLine.emptyFunction": true,
+    "editor.detectIndentation": false,
+    "editor.fontSize": 16,
+    "editor.formatOnSave": false,
+    "editor.tabSize": 4,
     "files.associations": {
         "time.h": "c",
         "*.def": "c",
         "atomic": "c",
-        "ctype.h": "c"
+        "ctype.h": "c",
+        "algorithm": "c"
     },
+    "files.trimTrailingWhitespace": true,
+    "python.languageServer": "Pylance",
+    "terminal.integrated.fontSize": 14
 }
