--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,17 +1,17 @@
 {
     "[c]": {
+        "editor.defaultFormatter": "ms-vscode.cpptools",
         "editor.formatOnSave": true,
-        "editor.semanticHighlighting.enabled": true,
-        "editor.defaultFormatter": "ms-vscode.cpptools"
+        "editor.semanticHighlighting.enabled": true
     },
     "[makefile]": {
         "editor.detectIndentation": false,
         "editor.insertSpaces": false
     },
+    "C_Cpp.clang_format_style": "{BasedOnStyle: WebKit, UseTab: Never, IndentWidth: 4, TabWidth: 4, BreakBeforeBraces: Allman, AllowShortIfStatementsOnASingleLine: false, IndentCaseLabels: false, ColumnLimit: 0, AccessModifierOffset: -4, NamespaceIndentation: All, FixNamespaceComments: false, BreakBeforeBinaryOperators: NonAssignment, AlignAfterOpenBracket: Align, AlignOperands: true, AlignConsecutiveAssignments: true, AlignConsecutiveDeclarations: true, PointerAlignment: Right }",
     "C_Cpp.dimInactiveRegions": true,
     "C_Cpp.vcFormat.indent.preserveWithinParentheses": false,
     "C_Cpp.vcFormat.newLine.closeBraceSameLine.emptyFunction": true,
-    "C_Cpp.clang_format_style": "{ BasedOnStyle: WebKit, UseTab: Never, IndentWidth: 4, TabWidth: 4, BreakBeforeBraces: Allman, AllowShortIfStatementsOnASingleLine: false, IndentCaseLabels: false, ColumnLimit: 0, AccessModifierOffset: -4, NamespaceIndentation: All, FixNamespaceComments: false, BreakBeforeBinaryOperators: NonAssignment, AlignAfterOpenBracket: Align, AlignOperands: true, AlignConsecutiveAssignments: true, AlignConsecutiveDeclarations: true }",
     "editor.detectIndentation": true,
     "editor.formatOnSave": true,
     "editor.tabSize": 4,
@@ -26,5 +26,5 @@
     },
     "files.trimTrailingWhitespace": true,
     "makefile.ignoreDirectoryCommands": false,
-    "python.languageServer": "Pylance",
+    "python.languageServer": "Pylance"
 }
