--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,9 @@
     "[doxyfile]": {
         "editor.formatOnSave": false
     },
+    "[asm]": {
+        "editor.formatOnSave": false
+    },
     "C_Cpp.clang_format_style": "{BasedOnStyle: WebKit, UseTab: Never, IndentWidth: 4, TabWidth: 4, BreakBeforeBraces: Allman, AllowShortIfStatementsOnASingleLine: false, IndentCaseLabels: false, ColumnLimit: 0, AccessModifierOffset: -4, NamespaceIndentation: All, FixNamespaceComments: false, BreakBeforeBinaryOperators: NonAssignment, AlignAfterOpenBracket: Align, AlignOperands: true, AlignConsecutiveAssignments: true, AlignConsecutiveDeclarations: false, PointerAlignment: Right, AlignTrailingComments: true}",
     "C_Cpp.dimInactiveRegions": true,
     "C_Cpp.vcFormat.indent.preserveWithinParentheses": false,
@@ -26,7 +29,8 @@
         "opt-816.h": "c",
         "stdlib.h": "c",
         "time.h": "c",
-        "Doxyfile": "doxyfile"
+        "Doxyfile": "doxyfile",
+        "*.ps": "asm"
     },
     "files.trimTrailingWhitespace": true,
     "makefile.ignoreDirectoryCommands": false,
