--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -1,25 +1,27 @@
 name: windows_msys2
 
 on:
-  push:
-    branches:
-      - "main"
-      - "develop"
-      - "pcre"
-      - "test"
+    push:
+      branches:
+        - 'main'
+        - 'develop'
+        - 'pcre'
+        - 'tests'
 
 jobs:
-  amd64_windows_gcc:
-    runs-on: windows-2019
-    defaults:
-      run:
-        shell: msys2 {0}
-    steps:
-      - uses: actions/checkout@v2
+    amd64_windows_gcc:
+      runs-on: windows-2019
+      defaults:
+        run:
+          shell: msys2 {0}
+      steps:
       - uses: msys2/setup-msys2@v2
         with:
-          install: >-
-            base-devel
-            git
-            pcre
+            update: true
+            install: >-
+              base-devel
+              gcc
+              make
+              pcre
+              git
       - run: gcc -v
