--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -1,27 +1,29 @@
 name: windows_msys2
 
 on:
-    push:
-      branches:
-        - 'main'
-        - 'develop'
-        - 'pcre'
-        - 'tests'
+  push:
+    branches:
+      - "main"
+      - "develop"
+      - "pcre"
+      - "tests"
 
 jobs:
-    amd64_windows_gcc:
-      runs-on: windows-2019
-      defaults:
-        run:
-          shell: msys2 {0}
-      steps:
+  amd64_windows_gcc:
+    runs-on: windows-2019
+    defaults:
+      run:
+        shell: msys2 {0}
+    steps:
       - uses: msys2/setup-msys2@v2
         with:
-            update: true
-            install: >-
-              base-devel
-              gcc
-              make
-              pcre
-              git
+          update: true
+          install: >-
+            base-devel
+            gcc
+            make
+            pcre
+            git
       - run: gcc -v
+      - run: cmake -v
+      - run: git -v
