--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -22,8 +22,11 @@ jobs:
             base-devel
             gcc
             make
+            cmake
             pcre
             git
       - run: gcc -v
       - run: cmake -v
       - run: git -v
+      - run: make clean
+      - run: make -n
