--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -28,5 +28,4 @@ jobs:
       - run: gcc -v
       - run: cmake --version
       - run: git -v
-      - run: make clean
-      - run: make -n
+      - run: pwd
