--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -1,4 +1,4 @@
-name: msys2_windows-2019
+name: ubuntu_latest
 
 on:
   push:
@@ -9,23 +9,14 @@ on:
 
 jobs:
   amd64_windows_gcc:
-    runs-on: windows-2019
+    runs-on: ubuntu-latest
     defaults:
       run:
         shell: msys2 {0}
     steps:
-      - name: Windows Depends MSYS2
-        uses: msys2/setup-msys2@v2
-        with:
-          update: true
-          install: >-
-            base-devel
-            gcc
-            make
-            cmake
-            pcre-devel
-            git
-            python
+      - name: Install dependencies
+        run: |
+          sudo apt-get install -y build-essential gcc-multilib git cmake wget
       - name: Print development tools versions
         run: |
           echo "* gcc version:"
@@ -39,13 +30,6 @@ jobs:
           echo
           echo "* python version:"
           python --version
-          echo
-          echo "* msys2 version:"
-          uname -a
-          echo
-          echo "* msys2 package versions:"
-          pacman -Qe
-          echo
       - name: Check out opt-65816
         uses: actions/checkout@v3
         with:
