--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -8,11 +8,8 @@ on:
       - "pcre"
 
 jobs:
-  amd64_windows_gcc:
+  ubuntu_latest:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        shell: msys2 {0}
     steps:
       - name: Install dependencies
         run: |
