--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
       - name: Install dependencies
         run: |
-          sudo apt-get install -y build-essential gcc-multilib git cmake wget
+          sudo apt-get install -y build-essential gcc-multilib git cmake wget valgrind
       - name: Print development tools versions
         run: |
           echo "* gcc version:"
@@ -40,3 +40,6 @@ jobs:
           make -n
           make
           make tests
+      - name: Check memory leaks
+        run: |
+          make valgrind
