--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -53,6 +53,7 @@ jobs:
           ref: ${{ github.head_ref }}
           path: opt-65816
           fetch-depth: 0
+          submodules: true
       - name: Compilation of opt-65816 & tests
         run: |
           cd opt-65816
