--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -26,8 +26,8 @@ jobs:
           make clean
           sudo ln -s /usr/local/bin/gcc-12 /usr/local/bin/gcc
           sudo ln -s /usr/local/bin/g++-12 /usr/local/bin/g++
-          CFLAGS="-I/usr/local/include" make
-          CFLAGS+=-I/usr/local/include" make tests
+          CFLAGS+=-I/usr/local/include  make
+          CFLAGS+=-I/usr/local/include  make tests
       - name: Generate doxygen documentation
         run: |
           cd opt-65816
