--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -12,6 +12,7 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get install -y build-essential gcc-multilib git cmake wget valgrind doxygen
+          sudo apt list --installed | grep pcre
       - name: Check out opt-65816
         uses: actions/checkout@v3
         with:
